documentation/1.2/tour/functions.md
---
layout: tour12
title: Functions
tab: documentation
unique_id: docspage
author: Gavin King
doc_root: ../..
---

# #{page.title}

This is the eleventh part of the Tour of Ceylon. In the [previous leg](../modules) 
we looked at packages and modules. This leg covers first class and higher-order 
functions.


## First class and higher order functions

Ceylon isn't a _pure_ functional language: it has `variable` value 
references and so functions can have *side effects*. But one thing Ceylon 
has in common with functional programming languages is that it lets you 
treat functions as values, which in some people's eyes makes the language 
a kind of hybrid. In truth, there's nothing remotely new about having 
functions-as-values in an object oriented language&mdash;for example, 
Smalltalk, one of the first and still one of the cleanest object oriented 
languages, was built around this idea. Anyway, Ceylon, like Smalltalk and 
a number of other object oriented languages, lets you treat a function as 
an object and pass it to another function.

In this installment, we're going to discuss Ceylon's support for first class 
and higher order functions. A little bit of PL jargon:

- _First class functions_ means the ability to treat a function as a value, 
  assigning it to a variable, or passing it as an argument to another
  function. 
- A _higher order function_ is a function that accepts other functions as 
  arguments, or returns another function.
  
It's clear that these two ideas go hand-in-hand, so we'll just use the term 
"higher order functions" from now on.


## Representing the type of a function

Ceylon is a (very) statically typed language. So if we're going to treat a 
function as a value, the very first question that arises is: what is the 
type of the function? We need a way to encode the return type and parameter 
types of a function into the type system. Remember that Ceylon doesn't have 
"primitive" types. A strong design principle is that every type should be 
representable within the type system as a class or interface declaration.

In Ceylon, a single interface 
[`Callable`](#{site.urls.apidoc_1_2}/Callable.type.html) 
abstracts *all* functions. Its declaration is the following:

<!-- check:none -->
    shared interface Callable<out Return, in Arguments> 
            given Arguments satisfies Anything[] {}

The type parameter `Return` represents the return type of the function. The 
sequenced type parameter `Arguments`, which must be a sequence type, 
represents the parameter types of the function. We can encode any parameter
list as a tuple type. For example, the parameter list `(String s, Float x)`
is encoded as the tuple type `[String,Float]`.

So, take the following function:

<!-- try-post:

    print(sum(4, 2));
-->
    function sum(Integer x, Integer y) => x+y;

The type of `sum()` is:

<!-- try: -->
<!-- check:none -->
    Callable<Integer,[Integer,Integer]>

What about `void` functions? Well, the return type of a `void` function is 
considered to be `Anything`. So the type of a function like `print()` is:

<!-- try: -->
<!-- check:none -->
    Callable<Anything,[Anything]>

Folks who have a background in languages like ML might have expected that
`void` would be identified with some "unit" type, for example, `Null`, or
perhaps `[]`. But this approach would mean that a non-`void` method would
not be able to refine a `void` method, and that a non-`void` function would
not be able to be assigned to a `void` functional parameter. Therefore,
perfectly reasonable code would be rejected by the compiler.  

Note that a `void` function with a concrete implementation implicitly returns 
the value `null`. This is different to a function declared to return the type 
`Anything`, which may return any value at all, but must do it explicitly, via 
a `return` statement. The following functions have the same type, `Anything()`, 
but don't do exactly the same thing:

    Anything hello() { 
        print("hello");
        return "hello";
    }

    void hello() { 
        print("hello");
        //implicitly returns null
    }

You shouldn't rely upon a function that is declared `void` returning `null`,
because it might be a method that is refined by a non-`void` method, or a
reference to a non-`void` function.

We can abbreviate `Callable` types with a little syntax sugar:

- `Integer(Integer,Integer)` means `Callable<Integer,[Integer,Integer]>`, 
   and, likewise,
- `Anything(String)` means `Callable<Anything,[String]>`.


## Defining higher order functions

We now have enough machinery to be able to write higher order functions. 
For example, we could create a `repeat()` function that repeatedly executes 
a function.

<!-- try: -->
<!-- check:none:BROKEN -->
    void repeat(Integer times, 
            Anything(Integer) perform) {
        for (i in 1..times) {
            perform(i);
        }
    }

Let's try it:

<!-- try-pre:
    void repeat(Integer times, 
            Anything(Integer) perform) {
        for (i in 1..times) {
            perform(i);
        }
    }
-->
    void printNum(Integer n) => print(n);
    repeat(10, printNum);

Which would print the numbers 1 to 10 to the console.

There's one problem with this. In Ceylon, as we'll see later, we often call 
functions using named arguments, but the Callable type does not encode the 
names of the function parameters. So Ceylon has an alternative, more elegant, 
syntax for declaring a parameter of type `Callable`:

<!-- try-post:

    void printNum(Integer n) => print(n);
    repeat(10, printNum);
-->
<!-- id:repeat -->
    void repeat(Integer times, 
            void perform(Integer n)) {
        for (i in 1..times) {
            perform { n=i; };
        }
    }

This version is also slightly more readable, so it's the preferred syntax.


## Function references

When a name of a function appears without any arguments, like `printNum` does 
above, it's called a *function reference*. A function reference is the thing 
that really has the type `Callable`. In this case, `printNum` has the type 
`Callable<Anything,[Integer]>`, or simply `Anything(Integer)`.

Now, remember how we said that `Anything` is both the return type of a `void` 
function, and also the logical root of the type hierarchy? Well that's useful 
here, since it means that we can assign a function with any return type to any 
parameter which expects a `void` function, as long as the parameter lists 
match:

<!-- try: -->
<!-- id:attemptPrint -->
    Boolean attemptPrint(Integer n) {
        try {
            print(n);
            return true;
        }
        catch (Exception e) {
            return false;
        }
    }
    
And call it like this

<!-- try-pre:
    void repeat(Integer times, 
            void perform(Integer n)) {
        for (i in 1..times) {
            perform { n=i; };
        }
    }
    Boolean attemptPrint(Integer n) {
        try {
            print(n);
            return true;
        }
        catch (Exception e) {
            return false;
        }
    }

-->
<!-- cat-id:repeat -->
<!-- cat-id:attemptPrint -->
<!-- cat: void m() { -->
    repeat(10, attemptPrint);
<!-- cat: } -->

Another way we can produce a function reference is by partially applying a 
method to a receiver expression. For example, we could write the following:

<!-- try: -->
<!-- id:Hello -->
    class Hello(String name) {
        shared void say(Integer n) {
            print("Hello, ``name``, for the ``n``th time!");
        }
    }

And call it like this:

<!-- try-pre:
    void repeat(Integer times, 
            void perform(Integer n)) {
        for (i in 1..times) {
            perform { n=i; };
        }
    }

    class Hello(String name) {
        shared void say(Integer n) {
            print("Hello, ``name``, for the ``n``th time!");
        }
    }
-->
<!-- cat-id:repeat -->
<!-- cat-id:Hello -->
<!-- cat: void m() { -->
    repeat(10, Hello("Gavin").say);
<!-- cat: } -->

Here the expression `Hello("Gavin").say` has the same type as `print` above. 
It is of type `Anything(Integer)`.


## Function references and equality

The interface `Callable` doesn't satisfy 
[`Identifiable`](#{site.urls.apidoc_1_2}/Identifiable.type.html), so function 
references can't be 
[compared for identity](../language-module/#equality_and_identity).

On the other hand, value equality of functions is a notion that is 
_mathematically_ well-defined&mdash;two functions are equal if the produce 
the same value for every combination or arguments&mdash;but, unfortunately,
is in general _computationally undecidable_.

Therefore, comparison of function references using `equals()` or the `==`
operator always evaluates to `false`! This has some undesirable consequences,
for example:

- Repeatedly `add()`ing the same function reference to a `MutableSet` results 
  in a set with multiple elements. 
- It's impossible to have a `Map` with function references as keys. 

This is, however, the best we can reasonably do.


## Static method and attribute references

A static method reference is a reference to a method, qualified by the type
which declares the method.

<!-- try: -->
    value say = Hello.say;

In a static method reference, there's no receiving instance of the type! We
have not provided any instance of `Hello` in this snippet. What we just wrote
is quite different to this:

<!-- try: -->
    value say = Hello("Gavin").say;

So for a static method reference, to invoke the method, we must provide two 
items of information:

- first, an instance of the type, and
- then, the arguments of the function.

We provide these two items in distinct argument lists:

<!-- try: -->
    value say = Hello.say;
    value sayHello = say(Hello("World"));
    sayHello(3);

Or, simply:

<!-- try: -->
    value say = Hello.say;
    say(Hello("World"))(3);

Let's fill in the types, to see what's really going on here:

<!-- try: -->
    Anything(Integer)(Hello) say = Hello.say;
    Anything(Integer) sayHello = say(Hello("World"));
    sayHello(3);

That is, a static method reference is a function that returns a
function.

A static attribute reference is a reference to an attribute, qualified by
the type which declares the attribute.

<!-- try: -->
    Polar coord = .... ;
    value angle = Polar.angle;
    value radius = Polar.angle;
    Float a = angle(coord);
    Float radius = radius(coord);

Just to be sure, let's fill in the types:

<!-- try: -->
    Polar coord = .... ;
    Float(Polar) angle = Polar.angle;
    Float(Polar) radius = Polar.angle;
    Float a = angle(coord);
    Float radius = radius(coord);

Static attribute references work especially well with the 
[`map()`](#{site.urls.apidoc_1_2}/Iterable.type.html#map) 
method of `Iterable`:

<!-- try: -->
    {String*} names = people.map(Person.name); 


## Curried functions

A method or function may be declared in _curried_ form, allowing the method 
or function to be partially applied to its arguments. A curried function has
multiple lists of parameters:

<!-- try-post:

    print(adder(4)(2.0));
-->
    Float adder(Integer n)(Float x) => x+n;

The `adder()` function has type `Float(Float)(Integer)`. We can invoke it 
with a single integer argument to get a reference to a function of type 
`Float(Float)`, and store this reference as a function, like this:

<!-- try-pre:
    Float adder(Integer n)(Float x) => x+n;

-->
<!-- try-post:

    print(addOne(4.0));
-->
    Float addOne(Float x);
    addOne = adder(1);

Or as a value, like this:

<!-- try-pre:
    Float adder(Integer n)(Float x) => x+n;

-->
<!-- try-post:

    print(addOne(4.0));
-->
    Float(Float) addOne = adder(1);

(There only real difference between these two approaches is that in the 
first case we get to assign a name to the parameter of `addOne()`.)

When we subsequently invoke `addOne()`, the actual body of `adder()` is 
finally executed, producing a `Float`:

<!-- try-pre:
    Float adder(Integer n)(Float x) => x+n;
    Float addOne(Float x);
    addOne = adder(1);

-->
<!-- try-post:

    print(three);
-->
    Float three = addOne(2.0);

### Gotcha!

Did you notice that order of parameter lists is reversed in a type 
expression compared to a function declaration? Look again:

<!-- try: -->
    void printSum(String desc)(Float x, Float y) => print(desc + (x+y).string);
    Anything(Float,Float)(String) printSumRef = printSum;

The order of parameter lists in the function declaration reflects the order in 
which we supply arguments when we invoke the function. But in a function type 
expression, the return type comes always comes before the parameter types, so 
therefore the parameters which must be supplied _first_ come at the _last_ in 
the function type.

## Anonymous functions

The most famous higher-order functions are a trio of functions for transforming,
filtering, and summarizing sequences of values. In Ceylon, these three functions,
`map()`, `filter()`, and `fold()` are methods of the interface 
[`Iterable`](#{site.urls.apidoc_1_2}/Iterable.type.html).
(They even have a fourth, slightly less glamorous friend called `find()`, also a 
method of `Iterable`.)

As you've probably noticed, all the functions we've defined so far have been 
declared with a name, using a traditional C-like syntax. There's nothing wrong
with passing a named function to `map()`, `filter()`, or `fold()`, and indeed
that is often useful: 

<!-- try-pre:
    value measurements = { 3.4, 8.7, 1.7, 13.1, 7.7, 1.2 };

-->
<!-- try-post:

    print(max);
-->
    Float max = measurements.fold(0.0)(largest<Float>);

However, quite commonly, it's inconvenient to have to declare a whole named 
function just to pass it to `map()`, `filter()`, `fold()` or `find()`. Instead, 
we can declare an *anonymous function* inline, as part of the argument list:

<!-- try-pre:
    value measurements = { 3.4, 8.7, 1.7, 13.1, 7.7, 1.2 };

-->
<!-- try-post:

    print(max);
-->
    Float max = measurements.fold(0.0)
            ((Float max, Float num) => 
                    num>max then num else max);

An anonymous function has:

- optionally, the keyword `function` or `void`, and then
- a parameter list, enclosed in parentheses, followed by
- a fat arrow, `=>`, with an expression, or
- a block.

So we could rewrite the above using a block

<!-- try-pre:
    value measurements = { 3.4, 8.7, 1.7, 13.1, 7.7, 1.2 };

-->
<!-- try-post:

    print(max);
-->
    Float max = measurements.fold(0.0) 
            ((Float max, Float num) {
                return num>max then num else max;
            });

Note that it's quite difficult to come up with a good way to format anonymous
functions with blocks, so it's usually better to just give the function a 
name and use it by reference.

## Anonymous function parameter type inference

When an anonymous function occurs in an argument list, it's usually, but not
always, possible to infer the parameter types. We can write the previous 
example as follows:

<!-- try-pre:
    value measurements = { 3.4, 8.7, 1.7, 13.1, 7.7, 1.2 };

-->
<!-- try-post:

    print(max);
-->
    Float max = measurements.fold(0.0)
            ((max, num) => num>max then num else max);

Here, `max` and `num` have inferred type `Float`.

A similar sort of type inference applies when a reference to a generic function
occurs in an argument list:

<!-- try-pre:
    value measurements = { 3.4, 8.7, 1.7, 13.1, 7.7, 1.2 };

-->
<!-- try-post:

    print(max);
-->
    Float max = measurements.fold(0.0)(largest);

Here, the type argument of the function `largest()` is inferred to be `Float`. 


### Gotcha!

You might have noticed that `fold()` is defined in curried form, with two
argument lists. The reason it's defined like this is to allow inference of
the parameter types of its function argument. If it weren't defined in 
curried form, we would have to explicitly specify the anonymous function
parameter types, since the type of the first argument of `fold()` would
not be taken into account when inferring parameter types.

## More about higher-order functions

Let's see a more practical example, which mixes both ways of representing a 
function type. 

Suppose we have some kind of user interface component which can be observed by 
other objects in the system. We could use something like Java's 
`Observer`/`Observable` pattern:

    interface Event { }

    interface Observer {
        shared formal void observe(Event event);
    }
    
    abstract class Component() {
         
        variable {Observer*} observers = {};
         
        shared void addObserver(Observer observer) {
            observers = observers.follow(observer);
        }
         
        shared void fire(Event event) {
            for (o in observers) {
                o.observe(event);
            }
        }
    }

But now all event observers have to implement the interface `Observer`, which 
has just one method. Why don't we cut out the interface, and let event 
observers just register a function object as their event listener? In the 
following code, we define the `addObserver()` method to accept a function as 
a parameter.

    interface Event { }
    
    abstract class Component() {
         
        variable {Anything(Event)*} observers = {};
         
        shared void addObserver(void observe(Event event)) {
            observers = observers.follow(observe);
        }
         
        shared void fire(Event event) {
            for (observe in observers) {
                observe(event);
            }
        }
    }

Here we see the difference between the two ways of specifying a function type:

* `void observe(Event event)` is more readable in parameter lists, where 
  `observe` is the name of the parameter, but
* `Anything(Event)` is useful in container types such as iterables.

Now, any event observer can just pass a reference to one of its own methods to 
`addObserver()`:

<!-- try-pre:
    interface Event { }
    
    abstract class Component() {
         
        variable {Anything(Event)*} observers = {};
         
        shared void addObserver(void observe(Event event)) {
            observers = observers.follow(observe);
        }
         
        shared void fire(Event event) {
            for (observe in observers) {
                observe(event);
            }
        }
    }

-->
<!-- check:parse:Depends on Component, above, which requires OpenList -->
    class Listener(Component component) {
     
        void onEvent(Event e) {
            // respond to the event
            // ...
        }
         
        component.addObserver(onEvent);
         
        // ...
     
    }

When the name of a method appears in an expression without a list of arguments 
after it, it is a reference to the method, not an invocation of the method. 
Here, the expression `onEvent` is an expression of type `Anything(Event)` that 
refers to the method `onEvent()`.

If `onEvent()` were `shared`, we could even wire together the `Component` and 
`Listener` from some other code, to eliminate the dependency of `Listener` 
on `Component`:

<!-- try-pre:
    interface Event { }
    
    abstract class Component() {
         
        variable {Anything(Event)*} observers = {};
         
        shared void addObserver(void observe(Event event)) {
            observers = observers.follow(observe);
        }
         
        shared void fire(Event event) {
            for (observe in observers) {
                observe(event);
            }
        }
    }

-->
<!-- check:parse:Depends on Component, above, which requires OpenList -->
    class Listener() {
     
        shared void onEvent(Event e) {
            // respond to the event
            // ...
        }
         
        // ...
     
    }
    void listen(Component component, Listener listener) {
        component.addObserver(listener.onEvent);
    }

Here, the syntax `listener.onEvent` is a kind of partial application of the 
method `onEvent()`. It doesn't cause the `onEvent()` method to be 
executed (because we haven't supplied all the parameters yet). Rather, it 
results in a function that packages together the method reference `onEvent` 
and the method receiver `listener`.

It's also possible to declare a method that returns a function. Let's 
consider adding the ability to remove observers from a `Component`. We could 
use a `Subscription` interface:

    interface Event {}
    
    interface Subscription {
        shared formal void cancel();
        shared formal void handle(Event event);
    }
    
    class Component() {
        
        variable {Subscription*} subscriptions = {};
        
        shared Subscription addObserver(void observe(Event event)) {
            object subscription satisfies Subscription {
                handle = observe;
                cancel() => subscriptions 
                        = subscriptions.filter((s) => s!=this);
            }
            subscriptions = subscriptions.follow(subscription);
            return subscription;
        }
        
        shared void fire(Event event) {
            for (s in subscriptions) {
                s.handle(event);
            }
        }
        
    }


But a simpler solution might be to just eliminate the interface and return the 
`cancel()` method directly:

    interface Event {}
    
    class Component() {
        
        variable {Subscription*} subscriptions = {};
        
        class Subscription(shared void handle(Event event)) {
            shared void cancel() => subscriptions 
                        = subscriptions.filter((s) => s!=this);
        }
        
        shared Anything() addObserver(void observe(Event event)) {
            value subscription = Subscription(observe);
            subscriptions = subscriptions.follow(subscription);
            return subscription.cancel;
        }
        
        shared void fire(Event event) {
            for (s in subscriptions) {
                s.handle(event);
            }
        }
        
    }

Here, `addObserver()` returns a reference to the method `cancel()` of the
private nested class `Subscription`. The reference to the method can be called 
by any code that obtains the reference.

In case you're wondering, the type of the function `addObserver()` is 
`Anything()(Anything(Event))`.

<!--
Notice that the anonymous function is able to use the parameter `observe` of 
`addObserver()`. We say that the inner method receives a *closure* of the 
non-`variable` locals and parameters of the outer method—just like a method 
of a class receives a closure of the class initialization parameters and locals 
of the class initializer. In general, any inner class, method, or attribute 
declaration always receives the closure of the members of the class, method, or 
attribute declaration in which it is enclosed. This is an example of how regular 
the language is.
-->

We could invoke our method like this:

<!-- try: -->
<!-- check:none -->
    addObserver(onEvent)();

But if we were planning to use the method in this way, there would be no good 
reason for giving it two parameter lists. It's much more likely that we're 
planning to store or pass the reference to the inner method somewhere before 
invoking it.

<!-- try: -->
<!-- check:none -->
    Anything() cancel = addObserver(onEvent);
    // ...
    cancel();

The first line demonstrates how a function reference can be stored. The second 
line of code simply invokes the returned reference to `cancel()`.

<!--
We've already seen how an attribute can be defined using a block of code. Now 
we see that a method can be defined using a specifier. So, if you like, you 
can start thinking of a method as an attribute of type `Callable`—an 
attribute with parameters. Or if you prefer, you can think of an attribute as 
a member with zero parameter lists, and of a method as a member with one or 
more parameter lists. Either kind of member can be defined by reference, using 
`=`, or directly, by specifying a block of code to be executed.

Cool, huh? That's more regularity.
-->

### Gotcha!

Notice that even after eliminating `Subscription` from the external API of
`Component` class, we still needed to store `Subscription` objects internally.
The reason for this is that function references don't have any well-defined
notion of equality (not even identity equality), and so `x==y` always evaluates
to `false` for any two function references `x` and `y`. Thus, in order to be
able to _remove_ a function reference from the `subscriptions` using `filter()`,
we need a wrapping object that defines an identity for the subscription. 

## Composition and curry

The function `compose()` performs _function composition_. For example, given
the functions `print()` and `plus()` in `ceylon.language`, with the following
signatures:

<!-- try: -->
    shared void print(Anything line) { ... }
    
    shared Value plus<Value>(Value x, Value y)
        given Value satisfies Summable<Value> { ... }

We can see that the type of the function reference `print` is `Anything(Anything)`,
and that the type of the function reference `plus<Float>` is `Float(Float,Float)`.
Then we can write the following:

    Anything(Float,Float) printSum = compose(print,plus<Float>);
    printSum(2.0,2.0); //prints 4.0

The function `curry()` produces a function with multiple parameter lists, given
a function with multiple parameters:

<!-- try-pre:
    Anything(Float,Float) printSum = compose(print,plus<Float>);
-->
    Anything(Float)(Float) printSumCurried = curry(printSum);
    Anything(Float) printPlus2 = printSumCurried(2.0);
    printPlus2(2.0); //prints 4.0

The function `uncurry()` does the opposite, giving us back our original uncurried
signature:

<!-- try-pre:
    Anything(Float,Float) printSum = compose(print,plus<Float>);
    Anything(Float)(Float) printSumCurried = curry(printSum);
-->
<!-- try-post:
    printSumUncurried(2.0,2.0);
-->
    Anything(Float,Float) printSumUncurried = uncurry(printSumCurried);

Note that `compose()`, `curry()`, and `uncurry()` are ordinary functions, written 
in Ceylon.


## The spread operator

We've already seen a few examples of the spread operator. We've seen how to use
it to instantiate an iterable:

<!-- try: -->
    { "hello", *names }

Or a tuple:

<!-- try: -->
    [x, y, *labels]

We can also use it when calling a function. Consider the following function:

<!-- try: -->
    String formatDate(String format, 
                      Integer day, 
                      Integer|String month, 
                      Integer year) {
        ...
    }

And suppose we have a tuple representing a date:

<!-- try: -->
    value date = [15, "January", 2010];

Then we can pass the date to our function like this:

<!-- try: -->
    formatDate("dd MMMMM yyyy", *date)

Notice that the type of the tuple `["dd MMMMM yyyy", *date]` is:

<!-- try: -->
    [String,Integer,String,Integer] 

Now consider type of the function `formatDate`. It is:

<!-- try: -->
    String(String,Integer,Integer|String,Integer)
    
Or rather:

<!-- try: -->
    Callable<String,[String,Integer,Integer|String,Integer]>

Since the tuple type `[String,Integer,String,Integer]` is a subtype of 
`[String,Integer,Integer|String,Integer]`, the invocation is well-typed.
This demonstrates the relationship between tuples and function argument!
     


<!--
## Curry, uncurry and function composition

A method reference like `Float.times` is represented in "curried" form in Ceylon. 
I can write:

    Float twoTimes(Float x) = 2.0.times;

Here, the expression `2.times` is a typical first-class function reference 
produced by the partial application of the method 

[`times()`](#{site.urls.apidoc_1_2}/Numeric.type.html#times) 
to the receiver expression `2.0`.

But I can also write:

    Float times(Float x)(Float y) = Float.times;

Actually, the expression `Float.times` is really a metamodel reference to a 
method declaration. The type `Method<Float,Float,Float>` is a subtype of 
`Callable<Callable<Float,Float>,Float>`, so we can treat it as a 
function reference.

Therefore, an alternative definition of `twoTimes()` is:

    Float twoTimes(Float x) = Float.times(2);

(We're partially applying `Float.times` by supplying one of its two 
argument lists.)

Unfortunately, the following isn't correctly typed:

    Float product(Float x, Float y) = Float.times;  //error: Float.times not a Callable<Float,Float,Float>

The problem is that `Float.times`, when considered as a function reference, 
is a higher-order function that accepts a 
[`Float`](#{site.urls.apidoc_1_2}/Float.type.html) 
and returns a function that accepts a `Float`, not a first-order function 
that accepts two `Float`s.

So how can we transform the method reference `Float.times` into an "uncurried" 
function with a single parameter list?

Well, one really simple way would be to fall back to writing:

    Float product(Float x, Float y) {
        return x.times(y);   //or even: x*y
    }

But there's another way. Instead, we're going to use a really cool higher-order 
function that will be part of the Ceylon language module. It's just two lines 
of code, so I'm sure you'll immediately understand it:

    R uncurry<R,T,P*>(R curried(T t)(P* p))(T receiver, P* args) {
        return curried(receiver)(args);
    }

Whoah! What's *that*?

Well, let's try to unwind this:

* First, it's a function with two parameter lists, so `uncurry()()` is a 
  function that returns a function.
* The first parameter list contains a single argument which also has two 
  parameter lists, so the argument `curried()()` is also a function that 
  returns a function.
* `curried()()` has an argument of form `P*`, a sequenced type parameter,
  so we know that `curried()()` is somehow abstracted over functions with 
  arbitrary lists of parameters.
* The second parameter list contains two arguments, of the same types as the 
  parameters of the individual arguments of the parameter lists of 
  `curried()()`. These are the parameters of the function returned by 
  `uncurry()()`.

So what `uncurry()()` is doing is taking a function in curried form, where the 
second parameter list can have an arbitrary number of parameters, and 
producing a different function with just one parameter list, including all the 
original parameters of the argument function. It's "flattening" the parameter 
lists of `curried()()` into a single list of parameters. So we can write the 
following:

    Float product(Float x, Float y) = uncurry(Float.times);

Other kinds of operations on functions can be represented in a similar way. Consider:

    R curry<R,T,P*>(R uncurried(T t, P* p))(T receiver)(P* args) {
        return uncurried(receiver,args);
    }

This function does precisely the opposite of `uncurry()()`, it takes the 
first parameter of an argument function, and separates it out into its own 
parameter list, allowing the argument function to be partially applied:

    Float times(Float x)(Float y) = curry(product);
    Float double(Float y) = times(2.0);

Now consider:

    R compose<R,S,P*>(R f (S s), S g(P* p))(P* args) {
        return f(g(args));
    }

This function composes two functions:

    Float incrementThenDouble(Float x) = compose(2.0.times,1.0.plus);

Fortunately, you won't need to be writing functions like 
`curry()()`, `uncurry()()` and `compose()()` yourself. They're general 
purpose tools that are packaged as part of the 
[`ceylon.language`](#{site.urls.apidoc_1_2}/index.html)
module. Nevertheless, it's nice to know that machinery like this is 
expressible within the type system of Ceylon. 
-->

## There's more...

You'll find a more detailed discussion of how Ceylon represents function 
types using tuples [here](/blog/2013/01/21/abstracting-over-functions/),
including an in-depth discussion of `compose()` and `curry()`.

Now we're  going to talk about Ceylon's syntax for [named argument 
lists](../named-arguments) and for defining user interfaces and 
structured data. 

